Added Kfold and sequence embeddings

--- a/nn_model.ipynb
+++ b/nn_model.ipynb
@@ -2,39 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.callbacks import ModelCheckpoint\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Activation, Flatten,Dropout\n",
+    "from keras.layers import Dense, Activation,Dropout\n",
     "from keras.callbacks import EarlyStopping\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_absolute_error \n",
     "from sklearn import metrics #Import scikit-learn metrics module for accuracy calculation\n",
     "\n",
-    "\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sb\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings \n",
     "import keras.backend as K\n",
     "warnings.filterwarnings('ignore')\n",
     "warnings.filterwarnings('ignore', category=DeprecationWarning)\n",
     "from xgboost import XGBRegressor\n",
-    "\n",
+    "import pandas as pd\n",
     "import gensim\n",
     "\n",
     "wv = gensim.models.word2vec.Word2Vec.load(\"updated_google_corpus\")\n",
@@ -50,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "if TESTING_MODE:\n",
-    "    d = pd.get_dummies(train_data[[\"country\",\"region_1\",\"region_2\",\"province\",\"taster_name\",\"variety\"]])\n",
+    "    d = pd.get_dummies(train_data[[\"country\",\"region_2\",\"province\",\"taster_name\",\"variety\"]])\n",
     "    d[\"points\"]= train_data[\"points\"]\n",
     "    d[\"id\"] = train_data['id']\n",
     "#     col_dic = dict()\n",
@@ -90,14 +76,14 @@
     "#     num_data[\"points\"] = data[\"points\"]\n",
     "#     num_data[\"id\"] = data[\"id\"]\n",
     "#     num_data.head()\n",
-    "    d = pd.get_dummies(data[[\"country\",\"region_1\",\"region_2\",\"province\",\"taster_name\",\"variety\"]])\n",
+    "    d = pd.get_dummies(data[[\"country\",\"region_2\",\"province\",\"taster_name\",\"variety\"]])\n",
     "    d[\"points\"]= data[\"points\"]\n",
     "    d[\"id\"] = data['id']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +134,7 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Dense(2024, input_dim=X_train.shape[1]))\n",
+    "model.add(Dense(100, input_dim=X_train.shape[1]))\n",
     "model.add(Activation(\"sigmoid\"))\n",
     "model.add(Dropout(.5))\n",
     "model.add(Dense(256))\n",
